// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Stepper should click on center button 1`] = `
<DocumentFragment>
  .cache-jglfj7-StyledContainer {
  background-color: #ffffff;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-align-self: stretch;
  -ms-flex-item-align: stretch;
  align-self: stretch;
  font-weight: 500;
  height: 48px;
  border: 1px solid #d4dae7;
  border-radius: 4px;
}

.cache-1nta09j-StyledTouchable-StyledTouchable {
  border: 0;
  transition-property: opacity;
  transition-duration: 0.15s;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  background-color: transparent;
  padding: 0;
  margin: 0;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: calc(100% - 8px);
  position: relative;
  border-radius: 4px;
  width: 38px;
  margin: 0 4px;
}

.cache-1nta09j-StyledTouchable-StyledTouchable[aria-disabled='true'] {
  opacity: 0.5;
  cursor: not-allowed;
}

.cache-1nta09j-StyledTouchable-StyledTouchable[aria-disabled='false'] {
  cursor: pointer;
  touch-action: manipulation;
}

.cache-1nta09j-StyledTouchable-StyledTouchable>.etyrq8m5 {
  fill: #390171;
}

.cache-1nta09j-StyledTouchable-StyledTouchable:hover:not([disabled]) {
  background: #eeeeff;
}

.cache-wo41ov-StyledIcon-sizeStyles-StyledIcon {
  fill: #dce1eb;
  height: 26px;
  width: 26px;
  min-width: 26px;
  min-height: 26px;
}

.cache-wo41ov-StyledIcon-sizeStyles-StyledIcon.cache-wo41ov-StyledIcon-sizeStyles-StyledIcon {
  vertical-align: middle;
}

.cache-zu3ai1-StyledCenterBox {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  height: calc(100% - 8px);
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  outline: none;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  border-radius: 4px;
  border: 1px solid transparent;
  max-width: calc(100% - 96px);
}

.cache-zu3ai1-StyledCenterBox:hover:not([disabled], :focus) {
  border: 1px solid #4f0599;
}

.cache-zu3ai1-StyledCenterBox:focus-within:not([disabled]) {
  box-shadow: 0px 0px 0px 3px #4F059940;
  border: 1px solid #4f0599;
}

.cache-4fk8vx-StyledInput {
  color: #4a4f62;
  background-color: transparent;
  font-size: 16;
  border: none;
  text-align: right;
  outline: none;
  position: relative;
  margin-right: 4;
  max-width: 100%;
  font-weight: 500;
  text-align: center;
}

.cache-nqz10n-StyledIcon-sizeStyles-StyledIcon {
  fill: currentColor;
  height: 26px;
  width: 26px;
  min-width: 26px;
  min-height: 26px;
}

.cache-nqz10n-StyledIcon-sizeStyles-StyledIcon.cache-nqz10n-StyledIcon-sizeStyles-StyledIcon {
  vertical-align: middle;
}

<div
    class="etyrq8m0 cache-jglfj7-StyledContainer"
  >
    <button
      aria-disabled="false"
      aria-label="Minus"
      class="etyrq8m4 e1kgqxfn0 cache-1nta09j-StyledTouchable-StyledTouchable"
      type="button"
    >
      <svg
        class="etyrq8m5 etwatq50 cache-wo41ov-StyledIcon-sizeStyles-StyledIcon"
        viewBox="0 0 24 24"
      >
        <path
          d="M19,13H5V11H19V13Z"
        />
      </svg>
    </button>
    <div
      aria-live="assertive"
      class="cache-zu3ai1-StyledCenterBox etyrq8m3"
      role="status"
    >
      <input
        aria-label="Input"
        class="cache-4fk8vx-StyledInput etyrq8m2"
        name="stepper"
        style="width: 35px;"
        value="10"
      />
    </div>
    <button
      aria-disabled="false"
      aria-label="Plus"
      class="etyrq8m4 e1kgqxfn0 cache-1nta09j-StyledTouchable-StyledTouchable"
      type="button"
    >
      <svg
        class="etyrq8m5 etwatq50 cache-nqz10n-StyledIcon-sizeStyles-StyledIcon"
        viewBox="0 0 24 24"
      >
        <path
          d="M19,13H13V19H11V13H5V11H11V5H13V11H19V13Z"
        />
      </svg>
    </button>
  </div>
</DocumentFragment>
`;

exports[`Stepper should click on min button 1`] = `
<DocumentFragment>
  .cache-jglfj7-StyledContainer {
  background-color: #ffffff;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-align-self: stretch;
  -ms-flex-item-align: stretch;
  align-self: stretch;
  font-weight: 500;
  height: 48px;
  border: 1px solid #d4dae7;
  border-radius: 4px;
}

.cache-1nta09j-StyledTouchable-StyledTouchable {
  border: 0;
  transition-property: opacity;
  transition-duration: 0.15s;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  background-color: transparent;
  padding: 0;
  margin: 0;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: calc(100% - 8px);
  position: relative;
  border-radius: 4px;
  width: 38px;
  margin: 0 4px;
}

.cache-1nta09j-StyledTouchable-StyledTouchable[aria-disabled='true'] {
  opacity: 0.5;
  cursor: not-allowed;
}

.cache-1nta09j-StyledTouchable-StyledTouchable[aria-disabled='false'] {
  cursor: pointer;
  touch-action: manipulation;
}

.cache-1nta09j-StyledTouchable-StyledTouchable>.etyrq8m5 {
  fill: #390171;
}

.cache-1nta09j-StyledTouchable-StyledTouchable:hover:not([disabled]) {
  background: #eeeeff;
}

.cache-wo41ov-StyledIcon-sizeStyles-StyledIcon {
  fill: #dce1eb;
  height: 26px;
  width: 26px;
  min-width: 26px;
  min-height: 26px;
}

.cache-wo41ov-StyledIcon-sizeStyles-StyledIcon.cache-wo41ov-StyledIcon-sizeStyles-StyledIcon {
  vertical-align: middle;
}

.cache-zu3ai1-StyledCenterBox {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  height: calc(100% - 8px);
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  outline: none;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  border-radius: 4px;
  border: 1px solid transparent;
  max-width: calc(100% - 96px);
}

.cache-zu3ai1-StyledCenterBox:hover:not([disabled], :focus) {
  border: 1px solid #4f0599;
}

.cache-zu3ai1-StyledCenterBox:focus-within:not([disabled]) {
  box-shadow: 0px 0px 0px 3px #4F059940;
  border: 1px solid #4f0599;
}

.cache-4fk8vx-StyledInput {
  color: #4a4f62;
  background-color: transparent;
  font-size: 16;
  border: none;
  text-align: right;
  outline: none;
  position: relative;
  margin-right: 4;
  max-width: 100%;
  font-weight: 500;
  text-align: center;
}

.cache-nqz10n-StyledIcon-sizeStyles-StyledIcon {
  fill: currentColor;
  height: 26px;
  width: 26px;
  min-width: 26px;
  min-height: 26px;
}

.cache-nqz10n-StyledIcon-sizeStyles-StyledIcon.cache-nqz10n-StyledIcon-sizeStyles-StyledIcon {
  vertical-align: middle;
}

<div
    class="etyrq8m0 cache-jglfj7-StyledContainer"
  >
    <button
      aria-disabled="false"
      aria-label="Minus"
      class="etyrq8m4 e1kgqxfn0 cache-1nta09j-StyledTouchable-StyledTouchable"
      type="button"
    >
      <svg
        class="etyrq8m5 etwatq50 cache-wo41ov-StyledIcon-sizeStyles-StyledIcon"
        viewBox="0 0 24 24"
      >
        <path
          d="M19,13H5V11H19V13Z"
        />
      </svg>
    </button>
    <div
      aria-live="assertive"
      class="cache-zu3ai1-StyledCenterBox etyrq8m3"
      role="status"
    >
      <input
        aria-label="Input"
        class="cache-4fk8vx-StyledInput etyrq8m2"
        name="stepper"
        style="width: 25px;"
        value="8"
      />
    </div>
    <button
      aria-disabled="false"
      aria-label="Plus"
      class="etyrq8m4 e1kgqxfn0 cache-1nta09j-StyledTouchable-StyledTouchable"
      type="button"
    >
      <svg
        class="etyrq8m5 etwatq50 cache-nqz10n-StyledIcon-sizeStyles-StyledIcon"
        viewBox="0 0 24 24"
      >
        <path
          d="M19,13H13V19H11V13H5V11H11V5H13V11H19V13Z"
        />
      </svg>
    </button>
  </div>
</DocumentFragment>
`;

exports[`Stepper should click on plus button with a step value 1`] = `
<DocumentFragment>
  .cache-jglfj7-StyledContainer {
  background-color: #ffffff;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-align-self: stretch;
  -ms-flex-item-align: stretch;
  align-self: stretch;
  font-weight: 500;
  height: 48px;
  border: 1px solid #d4dae7;
  border-radius: 4px;
}

.cache-1nta09j-StyledTouchable-StyledTouchable {
  border: 0;
  transition-property: opacity;
  transition-duration: 0.15s;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  background-color: transparent;
  padding: 0;
  margin: 0;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: calc(100% - 8px);
  position: relative;
  border-radius: 4px;
  width: 38px;
  margin: 0 4px;
}

.cache-1nta09j-StyledTouchable-StyledTouchable[aria-disabled='true'] {
  opacity: 0.5;
  cursor: not-allowed;
}

.cache-1nta09j-StyledTouchable-StyledTouchable[aria-disabled='false'] {
  cursor: pointer;
  touch-action: manipulation;
}

.cache-1nta09j-StyledTouchable-StyledTouchable>.etyrq8m5 {
  fill: #390171;
}

.cache-1nta09j-StyledTouchable-StyledTouchable:hover:not([disabled]) {
  background: #eeeeff;
}

.cache-wo41ov-StyledIcon-sizeStyles-StyledIcon {
  fill: #dce1eb;
  height: 26px;
  width: 26px;
  min-width: 26px;
  min-height: 26px;
}

.cache-wo41ov-StyledIcon-sizeStyles-StyledIcon.cache-wo41ov-StyledIcon-sizeStyles-StyledIcon {
  vertical-align: middle;
}

.cache-zu3ai1-StyledCenterBox {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  height: calc(100% - 8px);
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  outline: none;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  border-radius: 4px;
  border: 1px solid transparent;
  max-width: calc(100% - 96px);
}

.cache-zu3ai1-StyledCenterBox:hover:not([disabled], :focus) {
  border: 1px solid #4f0599;
}

.cache-zu3ai1-StyledCenterBox:focus-within:not([disabled]) {
  box-shadow: 0px 0px 0px 3px #4F059940;
  border: 1px solid #4f0599;
}

.cache-4fk8vx-StyledInput {
  color: #4a4f62;
  background-color: transparent;
  font-size: 16;
  border: none;
  text-align: right;
  outline: none;
  position: relative;
  margin-right: 4;
  max-width: 100%;
  font-weight: 500;
  text-align: center;
}

.cache-nqz10n-StyledIcon-sizeStyles-StyledIcon {
  fill: currentColor;
  height: 26px;
  width: 26px;
  min-width: 26px;
  min-height: 26px;
}

.cache-nqz10n-StyledIcon-sizeStyles-StyledIcon.cache-nqz10n-StyledIcon-sizeStyles-StyledIcon {
  vertical-align: middle;
}

<div
    class="etyrq8m0 cache-jglfj7-StyledContainer"
  >
    <button
      aria-disabled="false"
      aria-label="Minus"
      class="etyrq8m4 e1kgqxfn0 cache-1nta09j-StyledTouchable-StyledTouchable"
      type="button"
    >
      <svg
        class="etyrq8m5 etwatq50 cache-wo41ov-StyledIcon-sizeStyles-StyledIcon"
        viewBox="0 0 24 24"
      >
        <path
          d="M19,13H5V11H19V13Z"
        />
      </svg>
    </button>
    <div
      aria-live="assertive"
      class="cache-zu3ai1-StyledCenterBox etyrq8m3"
      role="status"
    >
      <input
        aria-label="Input"
        class="cache-4fk8vx-StyledInput etyrq8m2"
        name="stepper"
        style="width: 35px;"
        value="30"
      />
    </div>
    <button
      aria-disabled="false"
      aria-label="Plus"
      class="etyrq8m4 e1kgqxfn0 cache-1nta09j-StyledTouchable-StyledTouchable"
      type="button"
    >
      <svg
        class="etyrq8m5 etwatq50 cache-nqz10n-StyledIcon-sizeStyles-StyledIcon"
        viewBox="0 0 24 24"
      >
        <path
          d="M19,13H13V19H11V13H5V11H11V5H13V11H19V13Z"
        />
      </svg>
    </button>
  </div>
</DocumentFragment>
`;

exports[`Stepper should focus input and modify value 1`] = `
<DocumentFragment>
  .cache-jglfj7-StyledContainer {
  background-color: #ffffff;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-align-self: stretch;
  -ms-flex-item-align: stretch;
  align-self: stretch;
  font-weight: 500;
  height: 48px;
  border: 1px solid #d4dae7;
  border-radius: 4px;
}

.cache-1nta09j-StyledTouchable-StyledTouchable {
  border: 0;
  transition-property: opacity;
  transition-duration: 0.15s;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  background-color: transparent;
  padding: 0;
  margin: 0;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: calc(100% - 8px);
  position: relative;
  border-radius: 4px;
  width: 38px;
  margin: 0 4px;
}

.cache-1nta09j-StyledTouchable-StyledTouchable[aria-disabled='true'] {
  opacity: 0.5;
  cursor: not-allowed;
}

.cache-1nta09j-StyledTouchable-StyledTouchable[aria-disabled='false'] {
  cursor: pointer;
  touch-action: manipulation;
}

.cache-1nta09j-StyledTouchable-StyledTouchable>.etyrq8m5 {
  fill: #390171;
}

.cache-1nta09j-StyledTouchable-StyledTouchable:hover:not([disabled]) {
  background: #eeeeff;
}

.cache-wo41ov-StyledIcon-sizeStyles-StyledIcon {
  fill: #dce1eb;
  height: 26px;
  width: 26px;
  min-width: 26px;
  min-height: 26px;
}

.cache-wo41ov-StyledIcon-sizeStyles-StyledIcon.cache-wo41ov-StyledIcon-sizeStyles-StyledIcon {
  vertical-align: middle;
}

.cache-zu3ai1-StyledCenterBox {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  height: calc(100% - 8px);
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  outline: none;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  border-radius: 4px;
  border: 1px solid transparent;
  max-width: calc(100% - 96px);
}

.cache-zu3ai1-StyledCenterBox:hover:not([disabled], :focus) {
  border: 1px solid #4f0599;
}

.cache-zu3ai1-StyledCenterBox:focus-within:not([disabled]) {
  box-shadow: 0px 0px 0px 3px #4F059940;
  border: 1px solid #4f0599;
}

.cache-4fk8vx-StyledInput {
  color: #4a4f62;
  background-color: transparent;
  font-size: 16;
  border: none;
  text-align: right;
  outline: none;
  position: relative;
  margin-right: 4;
  max-width: 100%;
  font-weight: 500;
  text-align: center;
}

.cache-nqz10n-StyledIcon-sizeStyles-StyledIcon {
  fill: currentColor;
  height: 26px;
  width: 26px;
  min-width: 26px;
  min-height: 26px;
}

.cache-nqz10n-StyledIcon-sizeStyles-StyledIcon.cache-nqz10n-StyledIcon-sizeStyles-StyledIcon {
  vertical-align: middle;
}

<div
    class="etyrq8m0 cache-jglfj7-StyledContainer"
  >
    <button
      aria-disabled="false"
      aria-label="Minus"
      class="etyrq8m4 e1kgqxfn0 cache-1nta09j-StyledTouchable-StyledTouchable"
      type="button"
    >
      <svg
        class="etyrq8m5 etwatq50 cache-wo41ov-StyledIcon-sizeStyles-StyledIcon"
        viewBox="0 0 24 24"
      >
        <path
          d="M19,13H5V11H19V13Z"
        />
      </svg>
    </button>
    <div
      aria-live="assertive"
      class="cache-zu3ai1-StyledCenterBox etyrq8m3"
      role="status"
    >
      <input
        aria-label="Input"
        class="cache-4fk8vx-StyledInput etyrq8m2"
        name="stepper"
        style="width: 35px;"
        type="text"
        value="20"
      />
    </div>
    <button
      aria-disabled="false"
      aria-label="Plus"
      class="etyrq8m4 e1kgqxfn0 cache-1nta09j-StyledTouchable-StyledTouchable"
      type="button"
    >
      <svg
        class="etyrq8m5 etwatq50 cache-nqz10n-StyledIcon-sizeStyles-StyledIcon"
        viewBox="0 0 24 24"
      >
        <path
          d="M19,13H13V19H11V13H5V11H11V5H13V11H19V13Z"
        />
      </svg>
    </button>
  </div>
</DocumentFragment>
`;

exports[`Stepper should focus input and modify value onMaxCrossed 1`] = `
<DocumentFragment>
  .cache-jglfj7-StyledContainer {
  background-color: #ffffff;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-align-self: stretch;
  -ms-flex-item-align: stretch;
  align-self: stretch;
  font-weight: 500;
  height: 48px;
  border: 1px solid #d4dae7;
  border-radius: 4px;
}

.cache-1nta09j-StyledTouchable-StyledTouchable {
  border: 0;
  transition-property: opacity;
  transition-duration: 0.15s;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  background-color: transparent;
  padding: 0;
  margin: 0;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: calc(100% - 8px);
  position: relative;
  border-radius: 4px;
  width: 38px;
  margin: 0 4px;
}

.cache-1nta09j-StyledTouchable-StyledTouchable[aria-disabled='true'] {
  opacity: 0.5;
  cursor: not-allowed;
}

.cache-1nta09j-StyledTouchable-StyledTouchable[aria-disabled='false'] {
  cursor: pointer;
  touch-action: manipulation;
}

.cache-1nta09j-StyledTouchable-StyledTouchable>.etyrq8m5 {
  fill: #390171;
}

.cache-1nta09j-StyledTouchable-StyledTouchable:hover:not([disabled]) {
  background: #eeeeff;
}

.cache-wo41ov-StyledIcon-sizeStyles-StyledIcon {
  fill: #dce1eb;
  height: 26px;
  width: 26px;
  min-width: 26px;
  min-height: 26px;
}

.cache-wo41ov-StyledIcon-sizeStyles-StyledIcon.cache-wo41ov-StyledIcon-sizeStyles-StyledIcon {
  vertical-align: middle;
}

.cache-zu3ai1-StyledCenterBox {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  height: calc(100% - 8px);
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  outline: none;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  border-radius: 4px;
  border: 1px solid transparent;
  max-width: calc(100% - 96px);
}

.cache-zu3ai1-StyledCenterBox:hover:not([disabled], :focus) {
  border: 1px solid #4f0599;
}

.cache-zu3ai1-StyledCenterBox:focus-within:not([disabled]) {
  box-shadow: 0px 0px 0px 3px #4F059940;
  border: 1px solid #4f0599;
}

.cache-4fk8vx-StyledInput {
  color: #4a4f62;
  background-color: transparent;
  font-size: 16;
  border: none;
  text-align: right;
  outline: none;
  position: relative;
  margin-right: 4;
  max-width: 100%;
  font-weight: 500;
  text-align: center;
}

.cache-1uvvtky-StyledTouchable-StyledTouchable {
  border: 0;
  transition-property: opacity;
  transition-duration: 0.15s;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  background-color: transparent;
  padding: 0;
  margin: 0;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: calc(100% - 8px);
  position: relative;
  border-radius: 4px;
  width: 38px;
  margin: 0 4px;
}

.cache-1uvvtky-StyledTouchable-StyledTouchable[aria-disabled='true'] {
  opacity: 0.5;
  cursor: not-allowed;
}

.cache-1uvvtky-StyledTouchable-StyledTouchable[aria-disabled='false'] {
  cursor: pointer;
  touch-action: manipulation;
}

.cache-1uvvtky-StyledTouchable-StyledTouchable:hover:not([disabled]) {
  background: #eeeeff;
}

.cache-nqz10n-StyledIcon-sizeStyles-StyledIcon {
  fill: currentColor;
  height: 26px;
  width: 26px;
  min-width: 26px;
  min-height: 26px;
}

.cache-nqz10n-StyledIcon-sizeStyles-StyledIcon.cache-nqz10n-StyledIcon-sizeStyles-StyledIcon {
  vertical-align: middle;
}

<div
    class="etyrq8m0 cache-jglfj7-StyledContainer"
  >
    <button
      aria-disabled="false"
      aria-label="Minus"
      class="etyrq8m4 e1kgqxfn0 cache-1nta09j-StyledTouchable-StyledTouchable"
      type="button"
    >
      <svg
        class="etyrq8m5 etwatq50 cache-wo41ov-StyledIcon-sizeStyles-StyledIcon"
        viewBox="0 0 24 24"
      >
        <path
          d="M19,13H5V11H19V13Z"
        />
      </svg>
    </button>
    <div
      aria-live="assertive"
      class="cache-zu3ai1-StyledCenterBox etyrq8m3"
      role="status"
    >
      <input
        aria-label="Input"
        class="cache-4fk8vx-StyledInput etyrq8m2"
        name="stepper"
        style="width: 45px;"
        type="text"
        value="100"
      />
    </div>
    <button
      aria-disabled="true"
      aria-label="Plus"
      class="etyrq8m4 e1kgqxfn0 cache-1uvvtky-StyledTouchable-StyledTouchable"
      disabled=""
      type="button"
    >
      <svg
        class="etyrq8m5 etwatq50 cache-nqz10n-StyledIcon-sizeStyles-StyledIcon"
        viewBox="0 0 24 24"
      >
        <path
          d="M19,13H13V19H11V13H5V11H11V5H13V11H19V13Z"
        />
      </svg>
    </button>
  </div>
</DocumentFragment>
`;

exports[`Stepper should focus input and modify value onMinCrossed 1`] = `
<DocumentFragment>
  .cache-jglfj7-StyledContainer {
  background-color: #ffffff;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-align-self: stretch;
  -ms-flex-item-align: stretch;
  align-self: stretch;
  font-weight: 500;
  height: 48px;
  border: 1px solid #d4dae7;
  border-radius: 4px;
}

.cache-1uvvtky-StyledTouchable-StyledTouchable {
  border: 0;
  transition-property: opacity;
  transition-duration: 0.15s;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  background-color: transparent;
  padding: 0;
  margin: 0;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: calc(100% - 8px);
  position: relative;
  border-radius: 4px;
  width: 38px;
  margin: 0 4px;
}

.cache-1uvvtky-StyledTouchable-StyledTouchable[aria-disabled='true'] {
  opacity: 0.5;
  cursor: not-allowed;
}

.cache-1uvvtky-StyledTouchable-StyledTouchable[aria-disabled='false'] {
  cursor: pointer;
  touch-action: manipulation;
}

.cache-1uvvtky-StyledTouchable-StyledTouchable:hover:not([disabled]) {
  background: #eeeeff;
}

.cache-wo41ov-StyledIcon-sizeStyles-StyledIcon {
  fill: #dce1eb;
  height: 26px;
  width: 26px;
  min-width: 26px;
  min-height: 26px;
}

.cache-wo41ov-StyledIcon-sizeStyles-StyledIcon.cache-wo41ov-StyledIcon-sizeStyles-StyledIcon {
  vertical-align: middle;
}

.cache-zu3ai1-StyledCenterBox {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  height: calc(100% - 8px);
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  outline: none;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  border-radius: 4px;
  border: 1px solid transparent;
  max-width: calc(100% - 96px);
}

.cache-zu3ai1-StyledCenterBox:hover:not([disabled], :focus) {
  border: 1px solid #4f0599;
}

.cache-zu3ai1-StyledCenterBox:focus-within:not([disabled]) {
  box-shadow: 0px 0px 0px 3px #4F059940;
  border: 1px solid #4f0599;
}

.cache-4fk8vx-StyledInput {
  color: #4a4f62;
  background-color: transparent;
  font-size: 16;
  border: none;
  text-align: right;
  outline: none;
  position: relative;
  margin-right: 4;
  max-width: 100%;
  font-weight: 500;
  text-align: center;
}

.cache-1nta09j-StyledTouchable-StyledTouchable {
  border: 0;
  transition-property: opacity;
  transition-duration: 0.15s;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  background-color: transparent;
  padding: 0;
  margin: 0;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: calc(100% - 8px);
  position: relative;
  border-radius: 4px;
  width: 38px;
  margin: 0 4px;
}

.cache-1nta09j-StyledTouchable-StyledTouchable[aria-disabled='true'] {
  opacity: 0.5;
  cursor: not-allowed;
}

.cache-1nta09j-StyledTouchable-StyledTouchable[aria-disabled='false'] {
  cursor: pointer;
  touch-action: manipulation;
}

.cache-1nta09j-StyledTouchable-StyledTouchable>.etyrq8m5 {
  fill: #390171;
}

.cache-1nta09j-StyledTouchable-StyledTouchable:hover:not([disabled]) {
  background: #eeeeff;
}

.cache-nqz10n-StyledIcon-sizeStyles-StyledIcon {
  fill: currentColor;
  height: 26px;
  width: 26px;
  min-width: 26px;
  min-height: 26px;
}

.cache-nqz10n-StyledIcon-sizeStyles-StyledIcon.cache-nqz10n-StyledIcon-sizeStyles-StyledIcon {
  vertical-align: middle;
}

<div
    class="etyrq8m0 cache-jglfj7-StyledContainer"
  >
    <button
      aria-disabled="true"
      aria-label="Minus"
      class="etyrq8m4 e1kgqxfn0 cache-1uvvtky-StyledTouchable-StyledTouchable"
      disabled=""
      type="button"
    >
      <svg
        class="etyrq8m5 etwatq50 cache-wo41ov-StyledIcon-sizeStyles-StyledIcon"
        viewBox="0 0 24 24"
      >
        <path
          d="M19,13H5V11H19V13Z"
        />
      </svg>
    </button>
    <div
      aria-live="assertive"
      class="cache-zu3ai1-StyledCenterBox etyrq8m3"
      role="status"
    >
      <input
        aria-label="Input"
        class="cache-4fk8vx-StyledInput etyrq8m2"
        name="stepper"
        style="width: 35px;"
        type="text"
        value="10"
      />
    </div>
    <button
      aria-disabled="false"
      aria-label="Plus"
      class="etyrq8m4 e1kgqxfn0 cache-1nta09j-StyledTouchable-StyledTouchable"
      type="button"
    >
      <svg
        class="etyrq8m5 etwatq50 cache-nqz10n-StyledIcon-sizeStyles-StyledIcon"
        viewBox="0 0 24 24"
      >
        <path
          d="M19,13H13V19H11V13H5V11H11V5H13V11H19V13Z"
        />
      </svg>
    </button>
  </div>
</DocumentFragment>
`;

exports[`Stepper should increase and decrease input with arrow up and down 1`] = `
<DocumentFragment>
  .cache-jglfj7-StyledContainer {
  background-color: #ffffff;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-align-self: stretch;
  -ms-flex-item-align: stretch;
  align-self: stretch;
  font-weight: 500;
  height: 48px;
  border: 1px solid #d4dae7;
  border-radius: 4px;
}

.cache-1nta09j-StyledTouchable-StyledTouchable {
  border: 0;
  transition-property: opacity;
  transition-duration: 0.15s;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  background-color: transparent;
  padding: 0;
  margin: 0;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: calc(100% - 8px);
  position: relative;
  border-radius: 4px;
  width: 38px;
  margin: 0 4px;
}

.cache-1nta09j-StyledTouchable-StyledTouchable[aria-disabled='true'] {
  opacity: 0.5;
  cursor: not-allowed;
}

.cache-1nta09j-StyledTouchable-StyledTouchable[aria-disabled='false'] {
  cursor: pointer;
  touch-action: manipulation;
}

.cache-1nta09j-StyledTouchable-StyledTouchable>.etyrq8m5 {
  fill: #390171;
}

.cache-1nta09j-StyledTouchable-StyledTouchable:hover:not([disabled]) {
  background: #eeeeff;
}

.cache-wo41ov-StyledIcon-sizeStyles-StyledIcon {
  fill: #dce1eb;
  height: 26px;
  width: 26px;
  min-width: 26px;
  min-height: 26px;
}

.cache-wo41ov-StyledIcon-sizeStyles-StyledIcon.cache-wo41ov-StyledIcon-sizeStyles-StyledIcon {
  vertical-align: middle;
}

.cache-zu3ai1-StyledCenterBox {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  height: calc(100% - 8px);
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  outline: none;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  border-radius: 4px;
  border: 1px solid transparent;
  max-width: calc(100% - 96px);
}

.cache-zu3ai1-StyledCenterBox:hover:not([disabled], :focus) {
  border: 1px solid #4f0599;
}

.cache-zu3ai1-StyledCenterBox:focus-within:not([disabled]) {
  box-shadow: 0px 0px 0px 3px #4F059940;
  border: 1px solid #4f0599;
}

.cache-4fk8vx-StyledInput {
  color: #4a4f62;
  background-color: transparent;
  font-size: 16;
  border: none;
  text-align: right;
  outline: none;
  position: relative;
  margin-right: 4;
  max-width: 100%;
  font-weight: 500;
  text-align: center;
}

.cache-1uvvtky-StyledTouchable-StyledTouchable {
  border: 0;
  transition-property: opacity;
  transition-duration: 0.15s;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  background-color: transparent;
  padding: 0;
  margin: 0;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: calc(100% - 8px);
  position: relative;
  border-radius: 4px;
  width: 38px;
  margin: 0 4px;
}

.cache-1uvvtky-StyledTouchable-StyledTouchable[aria-disabled='true'] {
  opacity: 0.5;
  cursor: not-allowed;
}

.cache-1uvvtky-StyledTouchable-StyledTouchable[aria-disabled='false'] {
  cursor: pointer;
  touch-action: manipulation;
}

.cache-1uvvtky-StyledTouchable-StyledTouchable:hover:not([disabled]) {
  background: #eeeeff;
}

.cache-nqz10n-StyledIcon-sizeStyles-StyledIcon {
  fill: currentColor;
  height: 26px;
  width: 26px;
  min-width: 26px;
  min-height: 26px;
}

.cache-nqz10n-StyledIcon-sizeStyles-StyledIcon.cache-nqz10n-StyledIcon-sizeStyles-StyledIcon {
  vertical-align: middle;
}

<div
    class="etyrq8m0 cache-jglfj7-StyledContainer"
  >
    <button
      aria-disabled="false"
      aria-label="Minus"
      class="etyrq8m4 e1kgqxfn0 cache-1nta09j-StyledTouchable-StyledTouchable"
      type="button"
    >
      <svg
        class="etyrq8m5 etwatq50 cache-wo41ov-StyledIcon-sizeStyles-StyledIcon"
        viewBox="0 0 24 24"
      >
        <path
          d="M19,13H5V11H19V13Z"
        />
      </svg>
    </button>
    <div
      aria-live="assertive"
      class="cache-zu3ai1-StyledCenterBox etyrq8m3"
      role="status"
    >
      <input
        aria-label="Input"
        class="cache-4fk8vx-StyledInput etyrq8m2"
        name="stepper"
        style="width: 45px;"
        type="text"
        value="100"
      />
    </div>
    <button
      aria-disabled="true"
      aria-label="Plus"
      class="etyrq8m4 e1kgqxfn0 cache-1uvvtky-StyledTouchable-StyledTouchable"
      disabled=""
      type="button"
    >
      <svg
        class="etyrq8m5 etwatq50 cache-nqz10n-StyledIcon-sizeStyles-StyledIcon"
        viewBox="0 0 24 24"
      >
        <path
          d="M19,13H13V19H11V13H5V11H11V5H13V11H19V13Z"
        />
      </svg>
    </button>
  </div>
</DocumentFragment>
`;

exports[`Stepper should renders correctly 1`] = `
<DocumentFragment>
  .cache-jglfj7-StyledContainer {
  background-color: #ffffff;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-align-self: stretch;
  -ms-flex-item-align: stretch;
  align-self: stretch;
  font-weight: 500;
  height: 48px;
  border: 1px solid #d4dae7;
  border-radius: 4px;
}

.cache-1nta09j-StyledTouchable-StyledTouchable {
  border: 0;
  transition-property: opacity;
  transition-duration: 0.15s;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  background-color: transparent;
  padding: 0;
  margin: 0;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: calc(100% - 8px);
  position: relative;
  border-radius: 4px;
  width: 38px;
  margin: 0 4px;
}

.cache-1nta09j-StyledTouchable-StyledTouchable[aria-disabled='true'] {
  opacity: 0.5;
  cursor: not-allowed;
}

.cache-1nta09j-StyledTouchable-StyledTouchable[aria-disabled='false'] {
  cursor: pointer;
  touch-action: manipulation;
}

.cache-1nta09j-StyledTouchable-StyledTouchable>.etyrq8m5 {
  fill: #390171;
}

.cache-1nta09j-StyledTouchable-StyledTouchable:hover:not([disabled]) {
  background: #eeeeff;
}

.cache-wo41ov-StyledIcon-sizeStyles-StyledIcon {
  fill: #dce1eb;
  height: 26px;
  width: 26px;
  min-width: 26px;
  min-height: 26px;
}

.cache-wo41ov-StyledIcon-sizeStyles-StyledIcon.cache-wo41ov-StyledIcon-sizeStyles-StyledIcon {
  vertical-align: middle;
}

.cache-zu3ai1-StyledCenterBox {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  height: calc(100% - 8px);
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  outline: none;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  border-radius: 4px;
  border: 1px solid transparent;
  max-width: calc(100% - 96px);
}

.cache-zu3ai1-StyledCenterBox:hover:not([disabled], :focus) {
  border: 1px solid #4f0599;
}

.cache-zu3ai1-StyledCenterBox:focus-within:not([disabled]) {
  box-shadow: 0px 0px 0px 3px #4F059940;
  border: 1px solid #4f0599;
}

.cache-4fk8vx-StyledInput {
  color: #4a4f62;
  background-color: transparent;
  font-size: 16;
  border: none;
  text-align: right;
  outline: none;
  position: relative;
  margin-right: 4;
  max-width: 100%;
  font-weight: 500;
  text-align: center;
}

.cache-1qlmcqr-StyledText {
  color: #4a4f62;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.cache-nqz10n-StyledIcon-sizeStyles-StyledIcon {
  fill: currentColor;
  height: 26px;
  width: 26px;
  min-width: 26px;
  min-height: 26px;
}

.cache-nqz10n-StyledIcon-sizeStyles-StyledIcon.cache-nqz10n-StyledIcon-sizeStyles-StyledIcon {
  vertical-align: middle;
}

<div
    class="etyrq8m0 cache-jglfj7-StyledContainer"
  >
    <button
      aria-disabled="false"
      aria-label="Minus"
      class="etyrq8m4 e1kgqxfn0 cache-1nta09j-StyledTouchable-StyledTouchable"
      type="button"
    >
      <svg
        class="etyrq8m5 etwatq50 cache-wo41ov-StyledIcon-sizeStyles-StyledIcon"
        viewBox="0 0 24 24"
      >
        <path
          d="M19,13H5V11H19V13Z"
        />
      </svg>
    </button>
    <div
      aria-live="assertive"
      class="cache-zu3ai1-StyledCenterBox etyrq8m3"
      role="status"
    >
      <input
        aria-label="Input"
        class="cache-4fk8vx-StyledInput etyrq8m2"
        name="stepper"
        style="width: 35px;"
        value="10"
      />
      <span
        class="cache-1qlmcqr-StyledText etyrq8m1"
      >
        unit
      </span>
    </div>
    <button
      aria-disabled="false"
      aria-label="Plus"
      class="etyrq8m4 e1kgqxfn0 cache-1nta09j-StyledTouchable-StyledTouchable"
      type="button"
    >
      <svg
        class="etyrq8m5 etwatq50 cache-nqz10n-StyledIcon-sizeStyles-StyledIcon"
        viewBox="0 0 24 24"
      >
        <path
          d="M19,13H13V19H11V13H5V11H11V5H13V11H19V13Z"
        />
      </svg>
    </button>
  </div>
</DocumentFragment>
`;

exports[`Stepper should renders correctly disabled 1`] = `
<DocumentFragment>
  .cache-150nqb-StyledContainer-StyledContainer {
  background-color: #f6f6f8;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-align-self: stretch;
  -ms-flex-item-align: stretch;
  align-self: stretch;
  font-weight: 500;
  height: 48px;
  border: 1px solid #d4dae7;
  border-radius: 4px;
}

.cache-150nqb-StyledContainer-StyledContainer>.etyrq8m4,
.cache-150nqb-StyledContainer-StyledContainer .etyrq8m2,
.cache-150nqb-StyledContainer-StyledContainer .etyrq8m3 {
  background-color: #f6f6f8;
  border: none;
  color: #d4dae7;
  opacity: 1;
  cursor: not-allowed;
}

.cache-1uvvtky-StyledTouchable-StyledTouchable {
  border: 0;
  transition-property: opacity;
  transition-duration: 0.15s;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  background-color: transparent;
  padding: 0;
  margin: 0;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: calc(100% - 8px);
  position: relative;
  border-radius: 4px;
  width: 38px;
  margin: 0 4px;
}

.cache-1uvvtky-StyledTouchable-StyledTouchable[aria-disabled='true'] {
  opacity: 0.5;
  cursor: not-allowed;
}

.cache-1uvvtky-StyledTouchable-StyledTouchable[aria-disabled='false'] {
  cursor: pointer;
  touch-action: manipulation;
}

.cache-1uvvtky-StyledTouchable-StyledTouchable:hover:not([disabled]) {
  background: #eeeeff;
}

.cache-wo41ov-StyledIcon-sizeStyles-StyledIcon {
  fill: #dce1eb;
  height: 26px;
  width: 26px;
  min-width: 26px;
  min-height: 26px;
}

.cache-wo41ov-StyledIcon-sizeStyles-StyledIcon.cache-wo41ov-StyledIcon-sizeStyles-StyledIcon {
  vertical-align: middle;
}

.cache-zu3ai1-StyledCenterBox {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  height: calc(100% - 8px);
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  outline: none;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  border-radius: 4px;
  border: 1px solid transparent;
  max-width: calc(100% - 96px);
}

.cache-zu3ai1-StyledCenterBox:hover:not([disabled], :focus) {
  border: 1px solid #4f0599;
}

.cache-zu3ai1-StyledCenterBox:focus-within:not([disabled]) {
  box-shadow: 0px 0px 0px 3px #4F059940;
  border: 1px solid #4f0599;
}

.cache-4fk8vx-StyledInput {
  color: #4a4f62;
  background-color: transparent;
  font-size: 16;
  border: none;
  text-align: right;
  outline: none;
  position: relative;
  margin-right: 4;
  max-width: 100%;
  font-weight: 500;
  text-align: center;
}

.cache-1b93rpl-StyledText {
  color: #d4dae7;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.cache-nqz10n-StyledIcon-sizeStyles-StyledIcon {
  fill: currentColor;
  height: 26px;
  width: 26px;
  min-width: 26px;
  min-height: 26px;
}

.cache-nqz10n-StyledIcon-sizeStyles-StyledIcon.cache-nqz10n-StyledIcon-sizeStyles-StyledIcon {
  vertical-align: middle;
}

<div
    class="etyrq8m0 cache-150nqb-StyledContainer-StyledContainer"
    disabled=""
  >
    <button
      aria-disabled="true"
      aria-label="Minus"
      class="etyrq8m4 e1kgqxfn0 cache-1uvvtky-StyledTouchable-StyledTouchable"
      disabled=""
      type="button"
    >
      <svg
        class="etyrq8m5 etwatq50 cache-wo41ov-StyledIcon-sizeStyles-StyledIcon"
        viewBox="0 0 24 24"
      >
        <path
          d="M19,13H5V11H19V13Z"
        />
      </svg>
    </button>
    <div
      aria-live="assertive"
      class="cache-zu3ai1-StyledCenterBox etyrq8m3"
      role="status"
    >
      <input
        aria-label="Input"
        class="cache-4fk8vx-StyledInput etyrq8m2"
        disabled=""
        name="stepper"
        style="width: 35px;"
        value="10"
      />
      <span
        class="cache-1b93rpl-StyledText etyrq8m1"
      >
        unit
      </span>
    </div>
    <button
      aria-disabled="true"
      aria-label="Plus"
      class="etyrq8m4 e1kgqxfn0 cache-1uvvtky-StyledTouchable-StyledTouchable"
      disabled=""
      type="button"
    >
      <svg
        class="etyrq8m5 etwatq50 cache-nqz10n-StyledIcon-sizeStyles-StyledIcon"
        viewBox="0 0 24 24"
      >
        <path
          d="M19,13H13V19H11V13H5V11H11V5H13V11H19V13Z"
        />
      </svg>
    </button>
  </div>
</DocumentFragment>
`;

exports[`Stepper should renders large size 1`] = `
<DocumentFragment>
  .cache-jglfj7-StyledContainer {
  background-color: #ffffff;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-align-self: stretch;
  -ms-flex-item-align: stretch;
  align-self: stretch;
  font-weight: 500;
  height: 48px;
  border: 1px solid #d4dae7;
  border-radius: 4px;
}

.cache-1nta09j-StyledTouchable-StyledTouchable {
  border: 0;
  transition-property: opacity;
  transition-duration: 0.15s;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  background-color: transparent;
  padding: 0;
  margin: 0;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: calc(100% - 8px);
  position: relative;
  border-radius: 4px;
  width: 38px;
  margin: 0 4px;
}

.cache-1nta09j-StyledTouchable-StyledTouchable[aria-disabled='true'] {
  opacity: 0.5;
  cursor: not-allowed;
}

.cache-1nta09j-StyledTouchable-StyledTouchable[aria-disabled='false'] {
  cursor: pointer;
  touch-action: manipulation;
}

.cache-1nta09j-StyledTouchable-StyledTouchable>.etyrq8m5 {
  fill: #390171;
}

.cache-1nta09j-StyledTouchable-StyledTouchable:hover:not([disabled]) {
  background: #eeeeff;
}

.cache-wo41ov-StyledIcon-sizeStyles-StyledIcon {
  fill: #dce1eb;
  height: 26px;
  width: 26px;
  min-width: 26px;
  min-height: 26px;
}

.cache-wo41ov-StyledIcon-sizeStyles-StyledIcon.cache-wo41ov-StyledIcon-sizeStyles-StyledIcon {
  vertical-align: middle;
}

.cache-zu3ai1-StyledCenterBox {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  height: calc(100% - 8px);
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  outline: none;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  border-radius: 4px;
  border: 1px solid transparent;
  max-width: calc(100% - 96px);
}

.cache-zu3ai1-StyledCenterBox:hover:not([disabled], :focus) {
  border: 1px solid #4f0599;
}

.cache-zu3ai1-StyledCenterBox:focus-within:not([disabled]) {
  box-shadow: 0px 0px 0px 3px #4F059940;
  border: 1px solid #4f0599;
}

.cache-4fk8vx-StyledInput {
  color: #4a4f62;
  background-color: transparent;
  font-size: 16;
  border: none;
  text-align: right;
  outline: none;
  position: relative;
  margin-right: 4;
  max-width: 100%;
  font-weight: 500;
  text-align: center;
}

.cache-nqz10n-StyledIcon-sizeStyles-StyledIcon {
  fill: currentColor;
  height: 26px;
  width: 26px;
  min-width: 26px;
  min-height: 26px;
}

.cache-nqz10n-StyledIcon-sizeStyles-StyledIcon.cache-nqz10n-StyledIcon-sizeStyles-StyledIcon {
  vertical-align: middle;
}

<div
    class="etyrq8m0 cache-jglfj7-StyledContainer"
  >
    <button
      aria-disabled="false"
      aria-label="Minus"
      class="etyrq8m4 e1kgqxfn0 cache-1nta09j-StyledTouchable-StyledTouchable"
      type="button"
    >
      <svg
        class="etyrq8m5 etwatq50 cache-wo41ov-StyledIcon-sizeStyles-StyledIcon"
        viewBox="0 0 24 24"
      >
        <path
          d="M19,13H5V11H19V13Z"
        />
      </svg>
    </button>
    <div
      aria-live="assertive"
      class="cache-zu3ai1-StyledCenterBox etyrq8m3"
      role="status"
    >
      <input
        aria-label="Input"
        class="cache-4fk8vx-StyledInput etyrq8m2"
        name="stepper"
        style="width: 35px;"
        value="10"
      />
    </div>
    <button
      aria-disabled="false"
      aria-label="Plus"
      class="etyrq8m4 e1kgqxfn0 cache-1nta09j-StyledTouchable-StyledTouchable"
      type="button"
    >
      <svg
        class="etyrq8m5 etwatq50 cache-nqz10n-StyledIcon-sizeStyles-StyledIcon"
        viewBox="0 0 24 24"
      >
        <path
          d="M19,13H13V19H11V13H5V11H11V5H13V11H19V13Z"
        />
      </svg>
    </button>
  </div>
</DocumentFragment>
`;

exports[`Stepper should renders small size 1`] = `
<DocumentFragment>
  .cache-22olbd-StyledContainer {
  background-color: #ffffff;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-align-self: stretch;
  -ms-flex-item-align: stretch;
  align-self: stretch;
  font-weight: 500;
  height: 32px;
  border: 1px solid #d4dae7;
  border-radius: 4px;
}

.cache-zlg80e-StyledTouchable-StyledTouchable {
  border: 0;
  transition-property: opacity;
  transition-duration: 0.15s;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  background-color: transparent;
  padding: 0;
  margin: 0;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: calc(100% - 8px);
  position: relative;
  border-radius: 4px;
  width: 22px;
  margin: 0 4px;
}

.cache-zlg80e-StyledTouchable-StyledTouchable[aria-disabled='true'] {
  opacity: 0.5;
  cursor: not-allowed;
}

.cache-zlg80e-StyledTouchable-StyledTouchable[aria-disabled='false'] {
  cursor: pointer;
  touch-action: manipulation;
}

.cache-zlg80e-StyledTouchable-StyledTouchable>.etyrq8m5 {
  fill: #390171;
}

.cache-zlg80e-StyledTouchable-StyledTouchable:hover:not([disabled]) {
  background: #eeeeff;
}

.cache-1nezq64-StyledIcon-sizeStyles-StyledIcon {
  fill: #dce1eb;
  height: 22px;
  width: 22px;
  min-width: 22px;
  min-height: 22px;
}

.cache-1nezq64-StyledIcon-sizeStyles-StyledIcon.cache-1nezq64-StyledIcon-sizeStyles-StyledIcon {
  vertical-align: middle;
}

.cache-un9e9q-StyledCenterBox {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  height: calc(100% - 8px);
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  outline: none;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  border-radius: 4px;
  border: 1px solid transparent;
  max-width: calc(100% - 64px);
}

.cache-un9e9q-StyledCenterBox:hover:not([disabled], :focus) {
  border: 1px solid #4f0599;
}

.cache-un9e9q-StyledCenterBox:focus-within:not([disabled]) {
  box-shadow: 0px 0px 0px 3px #4F059940;
  border: 1px solid #4f0599;
}

.cache-4fk8vx-StyledInput {
  color: #4a4f62;
  background-color: transparent;
  font-size: 16;
  border: none;
  text-align: right;
  outline: none;
  position: relative;
  margin-right: 4;
  max-width: 100%;
  font-weight: 500;
  text-align: center;
}

.cache-kvq6a-StyledIcon-sizeStyles-StyledIcon {
  fill: currentColor;
  height: 22px;
  width: 22px;
  min-width: 22px;
  min-height: 22px;
}

.cache-kvq6a-StyledIcon-sizeStyles-StyledIcon.cache-kvq6a-StyledIcon-sizeStyles-StyledIcon {
  vertical-align: middle;
}

<div
    class="etyrq8m0 cache-22olbd-StyledContainer"
  >
    <button
      aria-disabled="false"
      aria-label="Minus"
      class="etyrq8m4 e1kgqxfn0 cache-zlg80e-StyledTouchable-StyledTouchable"
      type="button"
    >
      <svg
        class="etyrq8m5 etwatq50 cache-1nezq64-StyledIcon-sizeStyles-StyledIcon"
        viewBox="0 0 24 24"
      >
        <path
          d="M19,13H5V11H19V13Z"
        />
      </svg>
    </button>
    <div
      aria-live="assertive"
      class="cache-un9e9q-StyledCenterBox etyrq8m3"
      role="status"
    >
      <input
        aria-label="Input"
        class="cache-4fk8vx-StyledInput etyrq8m2"
        name="stepper"
        style="width: 35px;"
        value="10"
      />
    </div>
    <button
      aria-disabled="false"
      aria-label="Plus"
      class="etyrq8m4 e1kgqxfn0 cache-zlg80e-StyledTouchable-StyledTouchable"
      type="button"
    >
      <svg
        class="etyrq8m5 etwatq50 cache-kvq6a-StyledIcon-sizeStyles-StyledIcon"
        viewBox="0 0 24 24"
      >
        <path
          d="M19,13H13V19H11V13H5V11H11V5H13V11H19V13Z"
        />
      </svg>
    </button>
  </div>
</DocumentFragment>
`;
